# structure

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  download.sh  init.sh  install.sh
cmake/: build.cmake  generalproc.cmake
src/: main.cpp
